--- a/index.html
+++ b/index.html
@@ -6,6 +6,6 @@
     <title>Document</title>
   </head>
   <body>
-    <script src="./js/test.js"></script>
+    <script src="./js/task1.js"></script>
   </body>
 </html>
