--- a/index.html
+++ b/index.html
@@ -6,6 +6,12 @@
     <title>Document</title>
   </head>
   <body>
-    <script src="./js/test.js"></script>
+    <!-- <script src="./js/test.js" type="module"></script> -->
+    <!-- <script src="./js/practice1.js" type="module"></script> -->
+    <script src="./js/practice3.js" type="module"></script>
+    <!-- <script src="./js/practice4.js" type="module"></script> -->
+    <!-- <script src="./js/practice5.js" type="module"></script> -->
+    <!-- <script src="./js/practice6.js" type="module"></script> -->
+    <!-- <script src="./js/practice7.js" type="module"></script> -->
   </body>
 </html>
