--- a/index.html
+++ b/index.html
@@ -6,6 +6,11 @@
     <title>Document</title>
   </head>
   <body>
-    <script src="./js/test.js"></script>
+    <!-- <script src="./js/test.js" type="module"></script> -->
+    <!-- <script src="./js/task1.js" type="module" ></script> -->
+    <!-- <script src="./js/task2.js" type="module" ></script> -->
+    <!-- <script src="./js/task3.js" type="module" ></script> -->
+    <!-- <script src="./js/task4.js" type="module" ></script> -->
+    <script src="./js/task5.js" type="module" ></script>
   </body>
 </html>
