--- a/index.html
+++ b/index.html
@@ -6,6 +6,15 @@
     <title>Document</title>
   </head>
   <body>
-    <script src="./js/test.js"></script>
+    <!-- <script src="./js/hm6task1.js" type="module"></script> -->
+    <!-- <script src="./js/hm6task2.js" type="module"></script> -->
+    <script src="./js/hm6task3.js" type="module"></script>
+    <!-- <script src="./js/hm6task4.js" type="module"></script> -->
+    <!-- <script src="./js/hm6task5.js" type="module"></script> -->
+    <!-- <script src="./js/hm6task6.js" type="module"></script> -->
+    <!-- <script src="./js/hm6task7.js" type="module"></script> -->
+    <!-- <script src="./js/hm6task8.js" type="module"></script> -->
+    <!-- <script src="./js/hm6task9.js" type="module"></script> -->
+    <!-- <script src="./js/hm6task10.js" type="module"></script> -->
   </body>
 </html>
