--- a/index.html
+++ b/index.html
@@ -7,10 +7,10 @@
   </head>
   <body>
     <!-- <script src="./js/test.js" type="module"></script> -->
-    <!-- <script src="./js/task1.js" type="module" ></script> -->
-    <!-- <script src="./js/task2.js" type="module" ></script> -->
-    <!-- <script src="./js/task3.js" type="module" ></script> -->
-    <!-- <script src="./js/task4.js" type="module" ></script> -->
-    <script src="./js/task5.js" type="module" ></script>
+    <!-- <script src="./js/hm5task1.js" type="module" ></script> -->
+    <!-- <script src="./js/hm5task2.js" type="module" ></script> -->
+    <!-- <script src="./js/hm5task3.js" type="module" ></script> -->
+    <!-- <script src="./js/hm5task4.js" type="module" ></script> -->
+    <script src="./js/hm5task5.js" type="module"></script>
   </body>
 </html>
