--- a/index.html
+++ b/index.html
@@ -6,10 +6,10 @@
     <title>Document</title>
   </head>
   <body>
-    <!-- <script src="./js/task1.js" type="module"></script> -->
-    <!-- <script src="./js/task2.js" type="module"></script> -->
-    <!-- <script src="./js/task3.js" type="module"></script> -->
-    <!-- <script src="./js/task4.js" type="module"></script> -->
-    <script src="./js/task5.js" type="module"></script>
+    <!-- <script src="./js/hm4task1.js" type="module"></script> -->
+    <!-- <script src="./js/hm4task2.js" type="module"></script> -->
+    <!-- <script src="./js/hm4task3.js" type="module"></script> -->
+    <!-- <script src="./js/hm4task4.js" type="module"></script> -->
+    <script src="./js/hm4task5.js" type="module"></script>
   </body>
 </html>
