--- a/index.html
+++ b/index.html
@@ -6,14 +6,14 @@
     <title>JS is awesome</title>
   </head>
   <body>
-    <!-- <script src="./js/task1.js" type="module"></script> -->
-    <!-- <script src="./js/task2.js" type="module"></script> -->
-    <!-- <script src="./js/task3.js" type="module"></script> -->
-    <!-- <script src="./js/task4.js" type="module"></script> -->
-    <!-- <script src="./js/task5.js" type="module"></script> -->
-    <!-- <script src="./js/task6.js" type="module"></script> -->
-    <!-- <script src="./js/task7.js" type="module"></script> -->
-    <!-- <script src="./js/task8.js" type="module"></script> -->
-    <script src="./js/task9.js" type="module"></script>
+    <!-- <script src="./js/hm2task1.js" type="module"></script> -->
+    <!-- <script src="./js/hm2task2.js" type="module"></script> -->
+    <!-- <script src="./js/hm2task3.js" type="module"></script> -->
+    <!-- <script src="./js/hm2task4.js" type="module"></script> -->
+    <!-- <script src="./js/hm2task5.js" type="module"></script> -->
+    <!-- <script src="./js/hm2task6.js" type="module"></script> -->
+    <!-- <script src="./js/hm2task7.js" type="module"></script> -->
+    <!-- <script src="./js/hm2task8.js" type="module"></script> -->
+    <script src="./js/hm2task9.js" type="module"></script>
   </body>
 </html>
