--- a/index.html
+++ b/index.html
@@ -7,7 +7,6 @@
     <title>JS is awesome</title>
   </head>
   <body>
-
     <!-- <script src="./js/hm6task1.js" type="module"></script> -->
     <!-- <script src="./js/hm6task2.js" type="module"></script> -->
     <!-- <script src="./js/hm6task3.js" type="module"></script> -->
@@ -17,29 +16,27 @@
     <!-- <script src="./js/hm6task7.js" type="module"></script> -->
     <!-- <script src="./js/hm6task8.js" type="module"></script> -->
     <!-- <script src="./js/hm6task9.js" type="module"></script> -->
-    <script src="./js/hm6task10.js" type="module"></script>
-
+    <!-- <script src="./js/hm6task10.js" type="module"></script> -->
 
     <!-- <script src="./js/test.js" type="module"></script> -->
     <!-- <script src="./js/hm5task1.js" type="module" ></script> -->
     <!-- <script src="./js/hm5task2.js" type="module" ></script> -->
-    <!-- <script src="./js/hm5task3.js" type="module" ></script> -->
+    <!-- <script src="./js/hm5task3.js" type="module"></script> -->
     <!-- <script src="./js/hm5task4.js" type="module" ></script> -->
-    <script src="./js/hm5task5.js" type="module"></script>
+    <!-- <script src="./js/hm5task5.js" type="module"></script> -->
 
     <!-- <script src="./js/hm4task1.js" type="module"></script> -->
     <!-- <script src="./js/hm4task2.js" type="module"></script> -->
     <!-- <script src="./js/hm4task3.js" type="module"></script> -->
     <!-- <script src="./js/hm4task4.js" type="module"></script> -->
-    <script src="./js/hm4task5.js" type="module"></script>
-
+    <!-- <script src="./js/hm4task5.js" type="module"></script> -->
 
     <!-- <script src="./js/hm3task1.js" type="module"></script> -->
     <!-- <script src="./js/hm3task2.js" type="module"></script> -->
     <!-- <script src="./js/hm3task3.js" type="module"></script> -->
     <!-- <script src="./js/hm3task4.js" type="module"></script> -->
-    <script src="./js/hm3task5.js" type="module"></script>
-    <!-- <script src="./js/task6.js" type="module"></script> -->
+    <!-- <script src="./js/hm3task5.js" type="module"></script> -->
+    <!-- <script src="./js/hm3task6.js" type="module"></script> -->
 
     <!-- <script src="./js/hm2task1.js" type="module"></script> -->
     <!-- <script src="./js/hm2task2.js" type="module"></script> -->
@@ -49,18 +46,14 @@
     <!-- <script src="./js/hm2task6.js" type="module"></script> -->
     <!-- <script src="./js/hm2task7.js" type="module"></script> -->
     <!-- <script src="./js/hm2task8.js" type="module"></script> -->
-    <script src="./js/hm2task9.js" type="module"></script>
-
+    <!-- <script src="./js/hm2task9.js" type="module"></script> -->
 
     <!-- <script src="./js/homework1/homework1/hm1task1.js"></script> -->
     <!-- <script src="./js/homework1/homework1/hm1task2.js"></script> -->
     <!-- <script src="./js/homework1/homework1/hm1task3.js"></script> -->
     <!-- <script src="./js/homework1/homework1/hm1task4.js"></script> -->
-    <script src="./js/homework1/homework1/hm1task5.js"></script>
+    <!-- <script src="./js/homework1/homework1/hm1task5.js"></script> -->
 
-    <script src="./js/test.js"></script>
-
-
-
+    <!-- <script src="./js/test.js"></script> -->
   </body>
 </html>
